Fixes VIV-108: Move overflow declaration to general #content element, since this does not apply just to forms.

--- a/core/src/zeit/cms/browser/resources/cms.css
+++ b/core/src/zeit/cms/browser/resources/cms.css
@@ -238,6 +238,7 @@ pre {
   bottom: 0;
   top: 3em;
   position: absolute;
+  overflow: auto;
 }
 
 #visualContentWrapper {
